# asciidb-minorplanet

./: .gitignore  LICENSE  README.md  asciidb-minorplanet.cabal
asciidb-minorplanet-groundhog/: asciidb-minorplanet-groundhog.cabal
asciidb-minorplanet-groundhog/src/Database/Persist/MinorPlanetCenter/: DbTypes.hs
notes/Lowell Observatory/: license.txt  urls.txt
notes/Minor Planet Center/: errata.txt  format.txt  urls+info.txt
src/Data/: AngleUtil.hs  Conversion.hs
src/Data/ASCII/: Get.hs  Put.hs
src/Data/ASCII/LowellObservatory/: AstOrb.hs  ObjDiscoverers.hs  ObjObservations.hs  ObjSurveys.hs  OrbitCrossings.hs  OrbitUncertainties.hs
src/Data/ASCII/MinorPlanetCenter/: Design.hs  Note1.hs  Note2.hs  Obj.hs  Obs.hs  Observatory.hs  Observer.hs  ProvisionalDesignations.hs  Util.hs
src/Database/Persist/: MinorPlanetCenter.hs
src/Database/Persist/MinorPlanetCenter/: Selectors.hs
tests/t1-read/: Makefile  read-astorb.hs  read-mpcobs-annot.hs  read-mpcobs.hs  t1.cabal
tests/t1-read/test-dbs/: crecs-1.txt  crecs.txt  rrec-2.txt  rrec-?.txt  rrec.txt  srec-?.txt  srec.txt  unnum.txt  vrec.txt
tests/t2-persist/: Makefile  mpcobs-filtered-to-sqlite.hs  mpcobs-initial-to-sqlite.hs  mpcobs-to-sqlite.hs  sqlite-io.hs  t2.cabal
tests/t3-orbitdata/: FilterObsCmdLnOpts.hs  Makefile  Util.hs  filter-obs-annot.hs  filter-obs-parallel-annot.hs  filter-obs-parallel.hs  filter-obs.hs  filter-split-obs.sh  orbitdata-zip-all.hs  orbitdata-zip-filtered.hs  orbitdata-zip.hs  orbitdata.hs  t3.cabal
tests/t4-acid/: Makefile  mpcobs-initial-acid.hs  t4.cabal
tests/t5-indexing/: Makefile  t5.cabal  verify-rec-order.hs
