Name:		asciidb-minorplanet
Version:	0.0.0.1
Stability:	experimental
Description:	A set of functions for parsing minor planet (e.g. asteroid)
                data from various NASA ASCII-format databases.  The Minor
                Planet Center's observations databases
                (<http://www.minorplanetcenter.net/iau/ECS/MPCAT-OBS/MPCAT-OBS.html>)
                are supported as much as I could figure out their format.  The
                Lowell Observatory's asteroid orbits database
                (<ftp://ftp.lowell.edu/pub/elgb/astorb.html>) should be
                supported fairly well.
License:	GPL
Category:	Data
Build-Type:	Simple
Cabal-Version:	>= 1.2

Author:		Pavel M. Penev <pavpen@gmail.com>

Library
  Hs-Source-Dirs:	src
  Exposed-Modules:	Data.ASCII.Get, Data.ASCII.Put,
                        Data.ASCII.LowellObservatory.AstOrb,
                        Data.ASCII.LowellObservatory.ObjDiscoverers,
                        Data.ASCII.LowellObservatory.ObjObservations,
                        Data.ASCII.LowellObservatory.ObjSurveys,
                        Data.ASCII.LowellObservatory.OrbitCrossings,
                        Data.ASCII.LowellObservatory.OrbitUncertainties,
                        Data.ASCII.MinorPlanetCenter.Obs,
                        Data.ASCII.MinorPlanetCenter.Util,
                        Data.ASCII.MinorPlanetCenter.ProvisionalDesignations,
                        Database.Persist.MinorPlanetCenter
  Build-Depends:	base, attoparsec, binary >= 0.5.1.0,
                        bytestring >= 0.9.2.1, persistent >= 1.0.0,
                        persistent-template >= 1.0.0, safe, time >= 1.4.0.1
