Name:		t1
Version:	0.0
Stability:	experimental
Description:	Parse and print records from the Minor Planet Center's
                observations database, and from the Lowell Observatory's
                'astorb.dat'.
License:	GPL
Build-Type:	Simple
Cabal-Version:	>= 1.2

Author:		Pavel M. Penev <pavpen@gmail.com>

Executable read-mpcobs
  Main-is:		read-mpcobs.hs
  Build-Depends:	base, binary >= 0.5.1.0, bytestring >= 0.9.2.1, safe,
                        time >= 1.4.0.1, zlib >= 0.5.3.3, asciidb-minorplanet

Executable read-astorb
  Main-is:		read-astorb.hs
  Build-Depends:	base, attoparsec, binary >= 0.5.1.0,
                        bytestring >= 0.9.2.1, time >= 1.4.0.1, zlib >= 0.5.3.3,
                        asciidb-minorplanet
