Name:		t2
Version:	0.0
Stability:	experimental
Description:	Transfer observation, and asteroid trajectory records between
                the Haskell datatypes, and an SQLite database.
License:	GPL
Build-Type:	Simple
Cabal-Version:	>= 1.2

Author:		Pavel M. Penev <pavpen@gmail.com>

Executable sqlite-io
  Main-is:		sqlite-io.hs
  Build-Depends:	base, binary >= 0.5.1.0, bytestring >= 0.9.2.1,
                        groundhog, groundhog-sqlite, safe,
                        time >= 1.4.0.1, transformers, zlib >= 0.5.3.3,
                        asciidb-minorplanet

Executable mpcobs-to-sqlite
  Main-is:		mpcobs-to-sqlite.hs
  Build-Depends:	base, binary >= 0.5.1.0, bytestring >= 0.9.2.1,
                        groundhog, groundhog-sqlite, safe,
                        time >= 1.4.0.1, transformers, zlib >= 0.5.3.3,
                        asciidb-minorplanet

Executable mpcobs-filtered-to-sqlite
  Main-is:		mpcobs-filtered-to-sqlite.hs
  Build-Depends:	base, binary >= 0.5.1.0, bytestring >= 0.9.2.1,
                        groundhog, groundhog-sqlite, safe,
                        time >= 1.4.0.1, transformers, zlib >= 0.5.3.3,
                        asciidb-minorplanet

Executable mpcobs-initial-to-sqlite
  Main-is:		mpcobs-initial-to-sqlite.hs
  Build-Depends:	base, binary >= 0.5.1.0, bytestring >= 0.9.2.1,
                        groundhog, groundhog-sqlite, safe,
                        time >= 1.4.0.1, transformers, zlib >= 0.5.3.3,
                        asciidb-minorplanet
