Name:		t3
Version:	0.0
Stability:	experimental
Description:	Look up observation records in the SQLite database for
                trajectories' objects.
License:	GPL
Build-Type:	Simple
Cabal-Version:	>= 1.2

Author:		Pavel M. Penev <pavpen@gmail.com>

Executable orbitdata
  Main-is:		orbitdata.hs
  Build-Depends:	base, binary >= 0.5.1.0, bytestring >= 0.9.2.1,
                        groundhog, groundhog-sqlite, safe,
                        time >= 1.4.0.1, transformers, zlib >= 0.5.3.3,
                        asciidb-minorplanet
