Name:		t5
Version:	0.0
Stability:	experimental
Description:	Perform indexing and verification functions on the source
                <NumObs.txt.gz> and <UnnObs.txt.gz> databases.
License:	GPL
Build-Type:	Simple
Cabal-Version:	>= 1.2

Author:		Pavel M. Penev <pavpen@gmail.com>

Executable verify-rec-order
  Main-is:		verify-rec-order.hs
  Build-Depends:	base, binary >= 0.5.1.0, bytestring >= 0.9.2.1,
                        time >= 1.4.0.1, zlib >= 0.5.3.3,
                        asciidb-minorplanet
